[project]
name = "PM4PY-UI"
version = "0.1.0"   # Build Version. Update for each new release of your app.
description = "Built by GitHub Actions."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anyo"}
]
dependencies = [
    "flet==0.82.0",
    "pm4py",
    "pandas",
    "pyarrow",
    "asyncio",
]

[tool.uv]
exclude-dependencies = ["cvxopt"]

# Docs: https://docs.flet.dev/publish

[tool.flet]
build_number = 1
product = "PM4PY-UI"
org = "HessenAutomation"

[tool.flet.app]
path = "src"

[tool.flet.windows.cleanup]
packages = true
package_files = [
    "cvxopt",
    "cvxopt/**",
    "cvxopt-*.dist-info",
    "cvxopt-*.dist-info/**",
    "cvxopt.libs",
    "cvxopt.libs/**",
]
